[gd_scene load_steps=35 format=3 uid="uid://bbu1vwo7qnk8m"]

[ext_resource type="PackedScene" uid="uid://bjt5e50raeltk" path="res://source/game/map/MapNode.tscn" id="1_hiocq"]
[ext_resource type="Script" path="res://source/game/map/Map.gd" id="1_nqorq"]
[ext_resource type="Resource" uid="uid://0s5dlwaiowao" path="res://data/locations/smalltown.tres" id="3_4rjre"]
[ext_resource type="Resource" uid="uid://dchfjy0cha2ks" path="res://data/locations/bigtown.tres" id="3_mrhia"]
[ext_resource type="Script" path="res://source/game/map/LocationMenu.gd" id="3_q0o3h"]
[ext_resource type="Texture2D" uid="uid://cxq27p8s4cwwr" path="res://assets/props/castle.png" id="4_g7nj8"]
[ext_resource type="Resource" uid="uid://5ilm7vl34ki3" path="res://data/locations/vivivilage.tres" id="4_x31w4"]
[ext_resource type="Resource" uid="uid://dl77hia56sm5m" path="res://data/locations/forest.tres" id="5_vokf5"]
[ext_resource type="Texture2D" uid="uid://bxc8nyy6gmlhd" path="res://assets/props/houses.png" id="6_6b4aw"]
[ext_resource type="Script" path="res://source/game/map/ActionButton/ActionButton.gd" id="6_aspfx"]
[ext_resource type="Texture2D" uid="uid://8qt1enwv5jab" path="res://assets/props/house.png" id="8_3lxgt"]
[ext_resource type="Texture2D" uid="uid://hiotarvrp8o" path="res://assets/props/tipi.png" id="8_5n7cs"]
[ext_resource type="Script" path="res://source/game/hud/Notification/Notification.gd" id="8_lcl62"]
[ext_resource type="Resource" uid="uid://boo5s4sokpx1i" path="res://data/locations/bandit_camp.tres" id="9_bbo7h"]
[ext_resource type="PackedScene" uid="uid://dhykqpco4vjxi" path="res://source/game/hud/Recruit/ChooseUnit.tscn" id="9_gywco"]
[ext_resource type="Script" path="res://source/game/hud/StatusDisplay.gd" id="10_1b703"]
[ext_resource type="Texture2D" uid="uid://7nwcmulb25nf" path="res://assets/props/treePinesSmall.png" id="10_gp0b6"]
[ext_resource type="Resource" uid="uid://dsm3bwhjh2bkd" path="res://data/locations/camp.tres" id="11_4xaoi"]
[ext_resource type="Resource" uid="uid://m5aeqd4vwhww" path="res://data/locations/lindos_farm.tres" id="11_6go11"]
[ext_resource type="Texture2D" uid="uid://dwj44m7dil84x" path="res://assets/props/campfire.png" id="11_do8x2"]
[ext_resource type="Script" path="res://source/game/map/Interface.gd" id="11_yw83g"]
[ext_resource type="Resource" uid="uid://drsr4nlxk1i55" path="res://data/locations/death_woods.tres" id="13_we0pa"]
[ext_resource type="Texture2D" uid="uid://wuq5d5owamb" path="res://assets/props/treePine.png" id="14_js8pn"]
[ext_resource type="Theme" uid="uid://bgrllsi3i5dkj" path="res://assets/theme/default.tres" id="15_6utmg"]
[ext_resource type="Texture2D" uid="uid://dqshjc8usyh7v" path="res://assets/props/mill.png" id="17_bqqax"]
[ext_resource type="Resource" uid="uid://c5uhaojfk63h6" path="res://data/locations/soulstone.tres" id="17_mwcus"]
[ext_resource type="Theme" uid="uid://cw0fb2cqqyu1c" path="res://assets/theme/secondary.tres" id="18_tsemm"]
[ext_resource type="Texture2D" uid="uid://5hkhbwypjfjm" path="res://assets/props/rocksTall.png" id="19_o5kuj"]
[ext_resource type="Texture2D" uid="uid://jyn5h0jii3rx" path="res://assets/nine-patch.png" id="21_1qqg1"]
[ext_resource type="Script" path="res://source/game/hud/RestFade/RestFade.gd" id="21_ms4qe"]
[ext_resource type="AudioStream" uid="uid://dnpamueupffq7" path="res://assets/sound/fx_rest.wav" id="26_hotvd"]

[sub_resource type="Animation" id="Animation_nmsqv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0823529, 0.0823529, 0.0823529, 0)]
}

[sub_resource type="Animation" id="Animation_hvtac"]
resource_name = "rest"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.0823529, 0.0823529, 0.0823529, 0), Color(0.0823529, 0.0823529, 0.0823529, 1), Color(0.0823529, 0.0823529, 0.0823529, 1), Color(0.0823529, 0.0823529, 0.0823529, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_32jp6"]
_data = {
"RESET": SubResource("Animation_nmsqv"),
"rest": SubResource("Animation_hvtac")
}

[node name="Map" type="Node2D"]
script = ExtResource("1_nqorq")

[node name="Nodes" type="Node2D" parent="."]

[node name="Bigtown" parent="Nodes" instance=ExtResource("1_hiocq")]
position = Vector2(239, 209)
location = ExtResource("3_mrhia")
goes_to = [NodePath("../Forest")]
texture = ExtResource("4_g7nj8")

[node name="Forest" parent="Nodes" instance=ExtResource("1_hiocq")]
position = Vector2(469, 146)
location = ExtResource("5_vokf5")
goes_to = [NodePath("../Vivivilage")]
texture = ExtResource("10_gp0b6")

[node name="Vivivilage" parent="Nodes" instance=ExtResource("1_hiocq")]
position = Vector2(685, 201)
location = ExtResource("4_x31w4")
goes_to = [NodePath("../BanditCamp"), NodePath("../Camp")]
texture = ExtResource("8_3lxgt")

[node name="BanditCamp" parent="Nodes" instance=ExtResource("1_hiocq")]
position = Vector2(910, 115)
location = ExtResource("9_bbo7h")
goes_to = [NodePath("../Deathwoods")]
texture = ExtResource("8_5n7cs")

[node name="Camp" parent="Nodes" instance=ExtResource("1_hiocq")]
position = Vector2(703, 378)
location = ExtResource("11_4xaoi")
goes_to = [NodePath("../Deathwoods")]
texture = ExtResource("11_do8x2")

[node name="Deathwoods" parent="Nodes" instance=ExtResource("1_hiocq")]
position = Vector2(896, 501)
location = ExtResource("13_we0pa")
goes_to = [NodePath("../Smalltown"), NodePath("../Lindofarm")]
texture = ExtResource("14_js8pn")

[node name="Smalltown" parent="Nodes" instance=ExtResource("1_hiocq")]
position = Vector2(648, 643)
location = ExtResource("3_4rjre")
goes_to = [NodePath("../Soulstone")]
texture = ExtResource("6_6b4aw")

[node name="Lindofarm" parent="Nodes" instance=ExtResource("1_hiocq")]
position = Vector2(536, 477)
location = ExtResource("11_6go11")
goes_to = [NodePath("../Soulstone")]
texture = ExtResource("17_bqqax")

[node name="Soulstone" parent="Nodes" instance=ExtResource("1_hiocq")]
position = Vector2(265, 577)
location = ExtResource("17_mwcus")
goes_to = [NodePath("../Bigtown")]
texture = ExtResource("19_o5kuj")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("15_6utmg")
script = ExtResource("11_yw83g")

[node name="LocationMenu" type="MarginContainer" parent="Control"]
offset_left = 1007.0
offset_right = 1279.0
offset_bottom = 716.0
script = ExtResource("3_q0o3h")

[node name="Background" type="ColorRect" parent="Control/LocationMenu"]
offset_right = 272.0
offset_bottom = 716.0
color = Color(0.227451, 0.227451, 0.227451, 1)

[node name="CenterContainer" type="MarginContainer" parent="Control/LocationMenu"]
offset_right = 272.0
offset_bottom = 716.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Information" type="VBoxContainer" parent="Control/LocationMenu/CenterContainer"]
custom_minimum_size = Vector2(256, 0)
offset_left = 8.0
offset_top = 8.0
offset_right = 264.0
offset_bottom = 708.0

[node name="PlaceName" type="Label" parent="Control/LocationMenu/CenterContainer/Information"]
offset_right = 256.0
offset_bottom = 33.0
text = "Smalltown"

[node name="PlaceDescription" type="Label" parent="Control/LocationMenu/CenterContainer/Information"]
offset_top = 37.0
offset_right = 256.0
offset_bottom = 192.0
theme = ExtResource("18_tsemm")
text = "dubidubid ubi dbudibdubidbudibdubdibdu dubi dbud ibud iubdiubdi ubidu iudibud"
autowrap_mode = 2

[node name="AvailableActions" type="VBoxContainer" parent="Control/LocationMenu/CenterContainer/Information"]
offset_top = 196.0
offset_right = 256.0
offset_bottom = 402.0

[node name="BuyFood" type="Button" parent="Control/LocationMenu/CenterContainer/Information/AvailableActions"]
offset_right = 256.0
offset_bottom = 38.0
text = "buy food (-5)"
script = ExtResource("6_aspfx")
action = 4

[node name="Raid" type="Button" parent="Control/LocationMenu/CenterContainer/Information/AvailableActions"]
offset_top = 42.0
offset_right = 256.0
offset_bottom = 80.0
text = "raid"
script = ExtResource("6_aspfx")
action = 0

[node name="Trade" type="Button" parent="Control/LocationMenu/CenterContainer/Information/AvailableActions"]
offset_top = 84.0
offset_right = 256.0
offset_bottom = 122.0
text = "trade"
script = ExtResource("6_aspfx")
action = 2

[node name="Recruit" type="Button" parent="Control/LocationMenu/CenterContainer/Information/AvailableActions"]
offset_top = 126.0
offset_right = 256.0
offset_bottom = 164.0
text = "recruit"
script = ExtResource("6_aspfx")
action = 3

[node name="Rest" type="Button" parent="Control/LocationMenu/CenterContainer/Information/AvailableActions"]
offset_top = 168.0
offset_right = 256.0
offset_bottom = 206.0
text = "rest"
script = ExtResource("6_aspfx")
action = 1

[node name="ControlsDisplay" type="HBoxContainer" parent="Control"]
offset_left = 9.0
offset_top = 669.0
offset_right = 209.0
offset_bottom = 709.0

[node name="Action1" type="Label" parent="Control/ControlsDisplay"]
offset_top = 3.0
offset_right = 89.0
offset_bottom = 36.0
text = "Z Select"

[node name="Action2" type="Label" parent="Control/ControlsDisplay"]
offset_left = 93.0
offset_top = 5.0
offset_right = 94.0
offset_bottom = 35.0

[node name="ChooseUnit" parent="Control" instance=ExtResource("9_gywco")]
offset_right = 1281.0
offset_bottom = 718.0

[node name="StatusDisplay" type="HBoxContainer" parent="Control"]
offset_left = 8.0
offset_top = 8.0
offset_right = 368.0
offset_bottom = 34.0
alignment = 1
script = ExtResource("10_1b703")

[node name="GoldIndicator" type="Label" parent="Control/StatusDisplay"]
offset_right = 55.0
offset_bottom = 33.0
text = "Gold:"

[node name="Gold" type="Label" parent="Control/StatusDisplay"]
offset_left = 59.0
offset_right = 95.0
offset_bottom = 33.0
text = "100"

[node name="PopulationIndicator" type="Label" parent="Control/StatusDisplay"]
offset_left = 99.0
offset_right = 224.0
offset_bottom = 33.0
text = "Population:"

[node name="Population" type="Label" parent="Control/StatusDisplay"]
offset_left = 228.0
offset_right = 242.0
offset_bottom = 33.0
text = "0"

[node name="Food" type="Label" parent="Control/StatusDisplay"]
offset_left = 246.0
offset_right = 306.0
offset_bottom = 33.0
text = "Food:"

[node name="FoodValue" type="Label" parent="Control/StatusDisplay"]
offset_left = 310.0
offset_right = 368.0
offset_bottom = 33.0
text = "10/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RemainingActions" type="Label" parent="Control/StatusDisplay"]
offset_left = 372.0
offset_right = 564.0
offset_bottom = 33.0
text = "Movements used:"

[node name="Actions" type="Label" parent="Control/StatusDisplay"]
offset_left = 568.0
offset_right = 610.0
offset_bottom = 33.0
text = "0/2"

[node name="TargetName" type="Label" parent="Control"]
offset_right = 1280.0
offset_bottom = 120.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Notification" type="CenterContainer" parent="Control"]
custom_minimum_size = Vector2(1280, 720)
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("8_lcl62")

[node name="Backgrounds1" type="ColorRect" parent="Control/Notification"]
custom_minimum_size = Vector2(1280, 720)
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.192157)

[node name="MarginContainer" type="MarginContainer" parent="Control/Notification"]
offset_left = 448.0
offset_top = 302.0
offset_right = 832.0
offset_bottom = 417.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control/Notification/MarginContainer"]
texture_filter = 1
offset_right = 384.0
offset_bottom = 115.0
texture = ExtResource("21_1qqg1")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="Control/Notification/MarginContainer"]
offset_right = 384.0
offset_bottom = 115.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Notification/MarginContainer/MarginContainer"]
offset_left = 8.0
offset_top = 8.0
offset_right = 376.0
offset_bottom = 107.0

[node name="Label" type="Label" parent="Control/Notification/MarginContainer/MarginContainer/VBoxContainer"]
offset_right = 368.0
offset_bottom = 62.0
theme = ExtResource("18_tsemm")
text = "Action points restored
Party consumed XXX food"

[node name="ActionInstruction" type="Label" parent="Control/Notification/MarginContainer/MarginContainer/VBoxContainer"]
offset_top = 66.0
offset_right = 368.0
offset_bottom = 99.0
text = "Z to close"
horizontal_alignment = 2

[node name="Sfx" type="Node" parent="Control/Notification"]

[node name="Rest" type="AudioStreamPlayer" parent="Control/Notification/Sfx"]
stream = ExtResource("26_hotvd")
volume_db = -15.0

[node name="RestMenu" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(1280, 720)
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.0823529, 0.0823529, 0.0823529, 0)
script = ExtResource("21_ms4qe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/RestMenu"]
libraries = {
"": SubResource("AnimationLibrary_32jp6")
}
